--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -12,9 +12,9 @@ test:
 
 # set these environment variables on your prod server
 production:
-  host: 
-  port: 
-  database: 
-  username: 
-  password: 
+  host: <%= ENV['MONGO_HOST'] %>
+  port: <%= ENV['MONGO_PORT'] %>
+  database: test_enron
+  username: <%= ENV['MONGO_USERNAME'] %>
+  password: <%= ENV['MONGO_PASSWORD'] %>
   
