fiddling with mongolab configuration

--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -12,4 +12,5 @@ test:
 
 # set these environment variables on your prod server
 production:
-  uri: <%= ENV["MONGOLAB_URI"] %>
+	
+  uri: <%= ENV['MONGOLAB_URI'].split(',')[0] %>
