--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -14,4 +14,4 @@ test:
 production:
 	
   #uri: <%= ENV['MONGOLAB_URI'].split(',')[0] %>
-  uri: mongodb://heroku_hjqswqbt:6hi06lr0jcmrc82245pbuu5oth@ds045853-a0.mongolab.com:45853
+  uri: "mongodb://heroku_hjqswqbt:6hi06lr0jcmrc82245pbuu5oth@ds045853-a0.mongolab.com:45853"
