--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -11,7 +11,5 @@ test:
   database: enron_test
 
 # set these environment variables on your prod server
-production:
-	
-  #uri: <%= ENV['MONGOLAB_URI'].split(',')[0] %>
-  uri: mongodb://heroku_hjqswqbt:6hi06lr0jcmrc82245pbuu5oth@ds045853-a0.mongolab.com:45853
+production:	
+  uri: <%= ENV['MONGOLAB_URI'].split(',')[0] %>
