--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -90,7 +90,7 @@ development:
 
 
 production:
-  sessions:
+  clients:
     default:
       # The standard MongoDB connection URI allows for easy
       # replica set connection setup.
